--- a/package.json
+++ b/package.json
@@ -2,17 +2,22 @@
   "name": "reproduction-implied-end-tags-react-ssr",
   "module": "index.tsx",
   "type": "module",
+  "scripts": {
+    "start": "tsx ."
+  },
   "devDependencies": {
     "@types/bun": "latest",
+    "@types/express": "5.0.0",
     "@types/node": "22.10.6",
     "@types/react": "19.0.7",
-    "@types/react-dom": "19.0.3"
+    "@types/react-dom": "19.0.3",
+    "tsx": "4.19.2"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "hono": "^4.6.16",
+    "express": "4.21.2",
     "react": "19.0.0",
     "react-dom": "19.0.0"
   },
